# japanese-ir-tutorial

./: .gitignore  README.md  pyproject.toml
docs/: 1-setup.md  2-pyterrier.md  3-dense-retrieval.md  4-sparse-retrieval.md  5-datasets.md
scripts/: splade_inverted_index.py  splade_retrieve.py  terrier_inverted_index.py  terrier_retrieve.py  utils.py
