[tool.poetry]
name = "japanese-ir-tutorial"
version = "0.1.0"
description = ""
authors = ["Makoto P. Kato <mpkato@acm.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tevatron = "^0.1.0"
torch = {version = "^2.3.0+cu118", source = "torch_cu118"}
transformers = {extras = ["torch"], version = "^4.40.1"}
fugashi = "^1.3.2"
ipadic = "^1.0.0"
unidic-lite = "^1.0.8"
faiss-cpu = "^1.8.0"
ir-measures = "^0.3.3"
python-terrier = "^0.10.0"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
